Refactor module structure for coterie_core
- Relocate core module files to the `coterie_core` directory.
- Rename the module to 'Coterie: Core' across all configuration and code files.
- Update namespace and paths in `composer.json` for proper PSR-4 autoload compliance.

--- a/coterie_core/composer.json
+++ b/coterie_core/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "drupal/coterie",
+  "name": "drupal/coterie_core",
   "description": "Base functionality and shared services for all Coterie social modules",
   "type": "drupal-module",
   "license": "GPL-2.0-or-later",
   "autoload": {
     "psr-4": {
-      "Drupal\\coterie\\": "src/"
+      "Drupal\\coterie_core\\": "src/"
     }
   },
   "extra": {
