Enhance Coterie post creation and management
- Integrate new routing configurations for managing Coterie posts in the admin section
- Establish permissions settings for Coterie post creation, editing, deletion, and administration
- Implement task link for adding Coterie posts through the admin interface
- Enhance the `Post` entity with separate form handlers and extended field definitions for improved usability and configuration

--- a/coterie_post/coterie_post.routing.yml
+++ b/coterie_post/coterie_post.routing.yml
@@ -5,3 +5,10 @@ coterie_post.collection:
     _title: 'Coterie Posts'
   requirements:
     _permission: 'administer coterie_post'
+entity.coterie_post.add_form:
+  path: '/admin/content/coterie-post/add'
+  defaults:
+    _entity_form: 'coterie_post.add'
+    _title: 'Add Coterie post'
+  requirements:
+    _permission: 'create coterie_post entities'
