Reorganize and rename Coterie modules and files
RESET MODULE

- Consolidate and rename core module files to streamline the module namespace from `coterie_core` to `coterie`.
- Relocate and restructure all `coterie_post` module files into a unified `modules/coterie_post` directory to maintain consistency.
- Update dependencies and configurations to reflect the new structure and naming conventions within the modules.
- Remove obsolete service definitions to align with streamlined module services.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "drupal/coterie_core",
+  "name": "drupal/coterie",
   "description": "Base functionality and shared services for all Coterie social modules",
   "type": "drupal-module",
   "license": "GPL-2.0-or-later",
