Remove coterie_post module and dependencies
- Remove the `coterie_post` module and its associated files, configurations, and dependencies from the project.
- Update module dependencies, removing obsolete or redundant configurations.
- Simplify project structure by deleting unused code and configurations.

--- a/modules/coterie_post/coterie_post.info.yml
+++ b/modules/coterie_post/coterie_post.info.yml
@@ -4,4 +4,4 @@ description: 'Allows users to create and manage Posts.'
 core_version_requirement: ^11
 package: Coterie
 dependencies:
-  - coterie_core
+  - coterie:coterie
