Enhance user relationship management in module
- Introduce an `unfollow_user` route to facilitate user unfollow actions in `coterie_relationship` module
- Enhance relationship management in the Drupal module with dynamic follow/unfollow button behavior and styles
- Implement backend logic in `RelationshipController` and `RelationshipManager` to support relationship removal actions

--- a/modules/coterie_relationship/coterie_relationship.routing.yml
+++ b/modules/coterie_relationship/coterie_relationship.routing.yml
@@ -6,3 +6,12 @@ coterie_relationship.follow_user:
   requirements:
     _permission: 'access content'
     user: \d+
+
+coterie_relationship.unfollow_user:
+  path: '/user/{user}/unfollow'
+  defaults:
+    _controller: '\Drupal\coterie_relationship\Controller\RelationshipController::unfollow'
+    _title: 'Unfollow User'
+  requirements:
+    _permission: 'access content'
+    user: \d+
