--- a/modules/coterie_relationship/coterie_relationship.routing.yml
+++ b/modules/coterie_relationship/coterie_relationship.routing.yml
@@ -15,3 +15,21 @@ coterie_relationship.unfollow_user:
   requirements:
     _permission: 'access content'
     user: \d+
+
+coterie_relationship.user_followers:
+  path: '/user/{user}/followers'
+  defaults:
+    _controller: '\Drupal\coterie_relationship\Controller\RelationshipController::followersPage'
+    _title: 'Followers'
+  requirements:
+    _permission: 'access content'
+    user: \d+
+
+coterie_relationship.user_following:
+  path: '/user/{user}/following'
+  defaults:
+    _controller: '\Drupal\coterie_relationship\Controller\RelationshipController::followingPage'
+    _title: 'Following'
+  requirements:
+    _permission: 'access content'
+    user: \d+
